--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ One can also see some airlines doing much better than others in regards to this 
 <div id="chartContainer">
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 900, 600);
-    d3.csv("Data and License/FlightData.csv", function (data) {
+    d3.csv("Data and License/Flightdata.csv", function (data) {
       
       var myChart = new dimple.chart(svg, data);
       myChart.setBounds(60, 30, 600, 305);
