--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.3.0/dimple.latest.min.js"></script>
   <title>Average Carrier Delay by Airline Over Time</title>
  <style>
 h3 {
